hiding fixed footer on mobile displays

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -240,7 +240,7 @@ footer p {
     }
 }
 
-@media screen and (max-width: 320px) and (orientation:portrait){
+@media screen and (orientation:portrait){
     .fixed-footer{
         display: none;
     }
